--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Index</title>
+</head>My name is Aaron Francis, I am from Brooklyn NY.
+I currently have worked on 2 websites before so I am
+some what familiar with html and php, but I would
+like to strengthen my skills. </head><br>
+<img src="Aaron.jpg" alt="Aaron" width="500" height="400"><br>
+<body> My classes this semester include:
+</body>
+<ul>
+    <li>COMP360</li>
+    <li>COMP320</li>
+    <li>COMP322</li>
+    <li>COMP365</li>
+    <li>COMP390</li>
+    <li>ECEN375</li>
+</ul>
+<p>Please follow <a href="http://localhost:63342/hw1/introduction.html?_ijt=1e2ll6so03nrp6jbbit3prtq0t">this link</a>.</p>
+
+</html>
