--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 I currently have worked on 2 websites before so I am
 some what familiar with html and php, but I would
 like to strengthen my skills. </head><br>
-<img src="Aaron.jpg" alt="Aaron" width="500" height="400"><br>
+<img src="Aaron.JPG" alt="Aaron" width="500" height="400"><br>
 <body> My classes this semester include:
 </body>
 <ul>
